--- a/www/index.html
+++ b/www/index.html
@@ -7,40 +7,11 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="vendor/css/meppit-map.full.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
-    <script src="vendor/js/scroll-jqlite.js"></script>
-    <script src="vendor/js/scroll.js"></script>
-    <script src="vendor/js/ng-cordova.min.js"></script>
-
-    <script src="vendor/js/meppit-map.full.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/datasource.js"></script>
-    <script src="js/oauth.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/resources.js"></script>
-    <script src="js/datasource.js"></script>
-    <script src="js/oauth.js"></script>
-    <script src="js/directives.js"></script>
-
+    <link href="lib/vendor/css/meppit-map.full.css" rel="stylesheet">
   </head>
 
-  <body ng-app="app">
+  <body>
     <ion-nav-view></ion-nav-view>
   </body>
+  <script data-main="js/main" src="lib/vendor/js/require.js"></script>
 </html>
