--- a/www/index.html
+++ b/www/index.html
@@ -13,5 +13,57 @@
   <body>
     <ion-nav-view></ion-nav-view>
   </body>
-  <script data-main="js/main" src="lib/vendor/js/require.js"></script>
+
+  <script>
+    app = {};
+    app.core = {};
+  </script>
+  <script src="cordova.js"></script>
+  <script src="lib/ionic/js/angular/angular.js"></script>
+  <script src="lib/ionic/js/angular/angular-animate.js"></script>
+  <script src="lib/ionic/js/angular/angular-resource.js"></script>
+  <script src="lib/ionic/js/angular/angular-sanitize.js"></script>
+  <script src="lib/ionic/js/angular-ui/angular-ui-router.js"></script>
+  <script src="lib/ionic/js/ionic.js"></script>
+  <script src="lib/ionic/js/ionic-angular.js"></script>
+  <script src="lib/vendor/js/ng-cordova.min.js"></script>
+  <script src="lib/vendor/js/scroll-jqlite.js"></script>
+  <script src="lib/vendor/js/scroll.js"></script>
+  <script src="lib/vendor/js/meppit-map.full.js"></script>
+
+  <script src="js/config.js"></script>
+  <script src="js/routes.js"></script>
+
+  <script src="js/core/api.js"></script>
+  <script src="js/core/authentication.js"></script>
+  <script src="js/core/datasource.js"></script>
+  <script src="js/core/directives.js"></script>
+  <script src="js/core/localStorage.js"></script>
+  <script src="js/core/native.js"></script>
+  <script src="js/core/network.js"></script>
+  <script src="js/core/oauth.js"></script>
+  <script src="js/core/resources.js"></script>
+  <script src="js/core/website.js"></script>
+  <script src="js/core/ui.js"></script>
+
+  <script src="js/comments/controllers.js"></script>
+  <script src="js/geodata/controllers.js"></script>
+
+  <script src="js/app.js"></script>
+
+  <script>
+    (function(angular, ionic) {
+
+      'use strict';
+
+      var start = function(){
+        angular.bootstrap(document, [app.main]);
+      }
+      if (document.body) {
+        start();
+      } else {
+        ionic.Platform.ready(start);
+      }
+    })(angular, ionic);
+  </script>
 </html>
